# LearningOpenCV4

./: .gitignore  README.md
project/basic_drawing/: README.md
project/basic_drawing/code/cpp/: CMakeLists.txt
project/basic_drawing/code/python/: basic_drawing.py
project/blend_images/: README.md
project/blend_images/code/cpp/: CMakeLists.txt
project/blend_images/code/python/: blend_images.py
project/change_contrast_brightness/: README.md
project/change_contrast_brightness/code/cpp/: CMakeLists.txt
project/change_contrast_brightness/code/python/: change_contrast_brightness.py
project/discrete_fourier_transform/: README.md
project/discrete_fourier_transform/code/cpp/: CMakeLists.txt
project/discrete_fourier_transform/code/python/: discrete_fourier_transfor.py
project/file_io_using_xml_yaml/: README.md
project/file_io_using_xml_yaml/code/cpp/: CMakeLists.txt
project/file_io_using_xml_yaml/code/python/: file_io_using_xml_yaml.py
project/load_display/: README.md
project/load_display/code/cpp/: CMakeLists.txt
project/load_display/code/python/: load_display.py
project/load_modify_save/: README.md
project/load_modify_save/code/cpp/: CMakeLists.txt
project/load_modify_save/code/python/: load_and_display.py  load_modify_save.py
project/mask_operations/: README.md
project/mask_operations/code/cpp/: CMakeLists.txt
project/mask_operations/code/cpp/src/: main.cpp
project/mask_operations/code/python/: mask_operations.py
project/mat_basic_image_container/: README.md
project/mat_basic_image_container/code/cpp/: CMakeLists.txt
project/mat_basic_image_container/code/cpp/src/: main.cpp
project/mat_basic_image_container/code/python/: mat_basic_image_container.py
project/operations_with_images/: README.md
project/operations_with_images/code/cpp/: CMakeLists.txt
project/operations_with_images/code/cpp/src/: main.cpp
project/operations_with_images/code/python/: operations_with_images.py
project/scan_images/: README.md
project/scan_images/code/cpp/: CMakeLists.txt
project/scan_images/code/python/: scan_images.py
(+8 files in other folders)
